deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-demo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-demo
  template:
    metadata:
      labels:
        app: java-demo
    spec:
      containers:
      - name: java-demo
        image: java-demoapp
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-demo-service
spec:
  type: ClusterIP
  selector:
    app: java-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
