deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - local.java-demo.com
    secretName: java-demo-tls
  rules:
  - host: local.java-demo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-demo-service
            port:
              number: 80
